--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,9 @@
 [submodule "foundry-f23/foundry-smart-contract-lottery-f23/lib/foundry-devops"]
 	path = foundry-f23/foundry-smart-contract-lottery-f23/lib/foundry-devops
 	url = https://github.com/ChainAccelOrg/foundry-devops
+[submodule "foundry-f23/foundry-erc20-f23/lib/forge-std"]
+	path = foundry-f23/foundry-erc20-f23/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
+[submodule "foundry-f23/foundry-erc20-f23/lib/openzeppelin-contracts"]
+	path = foundry-f23/foundry-erc20-f23/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
