--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,9 @@
 [submodule "foundry-f23/foundry-nft-f23/lib/foundry-devops"]
 	path = foundry-f23/foundry-nft-f23/lib/foundry-devops
 	url = https://github.com/ChainAccelOrg/foundry-devops
+[submodule "foundry-f23/foundry-defi-stablecoin-f23/lib/forge-std"]
+	path = foundry-f23/foundry-defi-stablecoin-f23/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
+[submodule "foundry-f23/foundry-defi-stablecoin-f23/lib/openzeppelin-contracts"]
+	path = foundry-f23/foundry-defi-stablecoin-f23/lib/openzeppelin-contracts
+	url = https://github.com/openzeppelin/openzeppelin-contracts
