--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "foundry-f23/foundry-defi-stablecoin-f23/lib/openzeppelin-contracts"]
 	path = foundry-f23/foundry-defi-stablecoin-f23/lib/openzeppelin-contracts
 	url = https://github.com/openzeppelin/openzeppelin-contracts
+[submodule "foundry-f23/foundry-defi-stablecoin-f23/lib/chainlink-brownie-contracts"]
+	path = foundry-f23/foundry-defi-stablecoin-f23/lib/chainlink-brownie-contracts
+	url = https://github.com/smartcontractkit/chainlink-brownie-contracts
