--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,9 @@
 [submodule "foundry-f23/foundry-defi-stablecoin-f23/lib/chainlink-brownie-contracts"]
 	path = foundry-f23/foundry-defi-stablecoin-f23/lib/chainlink-brownie-contracts
 	url = https://github.com/smartcontractkit/chainlink-brownie-contracts
+[submodule "foundry-f23/foundry-upgrades-f23/lib/forge-std"]
+	path = foundry-f23/foundry-upgrades-f23/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
+[submodule "foundry-f23/foundry-upgrades-f23/lib/openzeppelin-contracts-upgradeable"]
+	path = foundry-f23/foundry-upgrades-f23/lib/openzeppelin-contracts-upgradeable
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
